--- a/public/Styles.css
+++ b/public/Styles.css
@@ -1,26 +1,86 @@
-
-html, body{ height:100%; }
-body{ margin:0;padding:0; background:#D84B4B; text-align:center; font:12px arial; }
-body::after{ content:''; height:100%; display:inline-block; vertical-align:middle; }
-p{ color:#AAA; padding-top:20px; }
-a{ color:#D84B4B; text-decoration:none; }
-h1{ color:#FFF; text-transform:uppercase; word-spacing:5px; letter-spacing:-1px; }
-form{ display:inline-block; vertical-align:middle; }
-.labeled{ margin:15px 0; line-height:2.8;
-    &::after{ content:''; display:table; clear:both; }
-    /* stlye the inputs */
-    input{ float:right; margin-left:10px; width:300px; padding:10px; font-size:inherit; border:1px solid #CCC; border-radius:5px; box-shadow:0 0 0 3px rgba(0,0,0,.05) inset;
-        &:focus{ border-color:#AAA; }
-    }
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #e8e8e8;
+    display: grid;
+    height: 100vh;
+    place-items: center;
 }
-.login-button{margin-top:10px;}
-@supports(pointer-events:none) {
-    .labeled{ position:relative; font-size:1.3em;
-        label{ position:absolute; left:10px; top:0; overflow:hidden; opacity:0.4; pointer-events:none; transition:.3s cubic-bezier(.45,.3,.45,1.33); }
-        input{ margin:0;
-            &:focus, &:valid{
-            & + label{ text-indent:-170px; }
-            }
-        }
-    }
+
+.container {
+    width: 700px;
+    height: 400px;
+    background: white;
+    position: relative;
+    display: grid;
+    grid-template: 100% / 50% 50%;
+    box-shadow: 2px 2px 10px 0 rgba(#333, 0.2);
+    transition: transform 0.5s ease;
+}
+
+.message {
+    position: absolute;
+    background: white;
+    width: 50%;
+    height: 100%;
+    transition: 0.5s all ease;
+    transform: translateX(100%);
+    z-index: 4;
+}
+
+.signup:before {
+    opacity: 0.3;
+    left: 0;
+}
+
+.login:before {
+    opacity: 0.3;
+    left: 100%;
+}
+
+.btn-wrapper {
+    width: 60%;
+}
+
+.form {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.form--heading {
+    font-size: 25px;
+    height: 50px;
+    color: #129D72;
+    text-align: center; /* Center text horizontally */
+}
+
+.form--signup {
+    border-right: 1px solid #999;
+}
+
+form {
+    width: 70%;
+    text-align: center; /* Center text horizontally */
+}
+
+form > * {
+    margin: 10px; /* Add margins around form elements */
+}
+
+.button {
+    width: 100%;
+    height: 30px;
+    border: 0;
+    outline: 0;
+    color: white;
+    font-size: 15px;
+    font-weight: 400;
+    position: relative;
+    z-index: 3;
+    background: #129D72;
+    cursor: pointer;
 }
